Pushing v198 from API 76605d332a79f0a9dff8f5ce879aa077a7ab718d

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -17698,7 +17698,7 @@ components:
             Whether the location is a physical location, or a virtual one. There is always one and
             only one virtual location for each Source account. You may have any number of physical
             locations, however.
-          example: virtual
+          example: physical
         description:
           type: string
           nullable: true
@@ -17706,6 +17706,7 @@ components:
             Free text description for this locationn. This might be used to include information
             about this location, the services that are offered here, or exceptions to operating
             hours.
+          example: Our new flagship in the heard of New York City.
         directions:
           type: string
           nullable: true
@@ -17715,6 +17716,7 @@ components:
             right on Front Street." You may also use it to provide more specific building level
             access information, such as "enter through the north lobby, pass the security desk and
             take the elevator to the 3rd floor."
+          example: Pass security in the lobby, and take the elevator to the 2nd floor.
         address:
           type: object
           properties:
@@ -17797,6 +17799,9 @@ components:
           description:
             The latitude/longitude pair for this location, if it's a phyiscal location. Source
             attempts to geocode all physical locations at the time of creation.
+          example:
+            - -120.23307
+            - 38.62936
         time_zone:
           type: string
           description:
