Pushing v202 from API c25250f1e38acb64abfeb10aa35d819dcb25fe45

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -21010,9 +21010,14 @@ components:
         - group.created
         - group.updated
         - group.deleted
+        - intent.created
+        - intent.updated
         - license.created
         - license.updated
         - license.deleted
+        - location.created
+        - location.updated
+        - location.deleted
         - measurement.created
         - member.created
         - member.updated
