Pushing v207 from API 237fa82b8e098e9f02234269afaff0ec8cb3ada9

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -1527,6 +1527,15 @@ paths:
           required: false
           description:
             When set to true, filter appointment types to only those which are bookable by a member.
+        - in: query
+          style: form
+          explode: true
+          name: include_deleted
+          schema:
+            type: boolean
+            description: When set to true, deleted appointment types are included.
+          required: false
+          description: When set to true, deleted appointment types are included.
       responses:
         default:
           description: Successful response.
@@ -14338,6 +14347,12 @@ components:
           format: date-time
           description: Timestamp when the appointment type was last updated.
           example: 2021-05-13T16:33:00.000Z
+        deleted_at:
+          type: string
+          format: date-time
+          nullable: true
+          description: Timestamp when the appointment type was deleted.
+          example: 2021-05-13T16:33:00.000Z
       required:
         - object
         - id
@@ -14361,6 +14376,7 @@ components:
         - recurrence
         - created_at
         - updated_at
+        - deleted_at
       title: Appointment Type
       description: >-
         Appointment types describe the different types of appointments that members can book with
