--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -2273,12 +2273,16 @@ paths:
                                 visits at 4pm, and so on.
                             virtual:
                               type: boolean
-                              description:
+                              description: >-
                                 Whether or not the user should be considered available for virtual
                                 appointments (i.e. video and phone calls) during the available time
-                                block. You may choose to set this to false if the user is working in
-                                a physical location and should not be taking telemedicine visits
-                                during this time.
+                                block. By default, this field is true. You may choose to set this to
+                                false if the user is working in a physical location and should not
+                                be taking telemedicine visits during this time.
+
+
+                                Note that this field is present on availability schedules for
+                                locations as well, but is ignored.
                             location:
                               type: string
                               example: loc_EtTXhFHUtCXO1JWBd8TN
@@ -2583,12 +2587,16 @@ paths:
                                 visits at 4pm, and so on.
                             virtual:
                               type: boolean
-                              description:
+                              description: >-
                                 Whether or not the user should be considered available for virtual
                                 appointments (i.e. video and phone calls) during the available time
-                                block. You may choose to set this to false if the user is working in
-                                a physical location and should not be taking telemedicine visits
-                                during this time.
+                                block. By default, this field is true. You may choose to set this to
+                                false if the user is working in a physical location and should not
+                                be taking telemedicine visits during this time.
+
+
+                                Note that this field is present on availability schedules for
+                                locations as well, but is ignored.
                             location:
                               type: string
                               example: loc_EtTXhFHUtCXO1JWBd8TN
@@ -8641,8 +8649,8 @@ paths:
           schema:
             type: string
             enum:
-              - virtual
               - physical
+              - virtual
             description: Limit results to locations of the provided type.
           required: false
           description: Limit results to locations of the provided type.
@@ -11176,7 +11184,8 @@ paths:
               an ISO-3166-2:US code. You can use this parameter when finding slots when you don't
               yet have a member or if the member's address is missing. If a member with an address
               is specified or inferred (using a member token), this parameter should not be used and
-              fails if the license_region does not match that of the member.
+              fails if the license_region does not match that of the member. If a physical location
+              is specified in the location parameter, this parameter should not be used.
             example: US-NY
           required: false
           description:
@@ -11184,7 +11193,8 @@ paths:
             ISO-3166-2:US code. You can use this parameter when finding slots when you don't yet
             have a member or if the member's address is missing. If a member with an address is
             specified or inferred (using a member token), this parameter should not be used and
-            fails if the license_region does not match that of the member.
+            fails if the license_region does not match that of the member. If a physical location is
+            specified in the location parameter, this parameter should not be used.
         - in: query
           style: form
           explode: true
@@ -11481,6 +11491,44 @@ paths:
 
 
             Must be a number between 5 and 360 minutes (6 hours).
+        - in: query
+          style: form
+          explode: true
+          name: location_type
+          schema:
+            type: string
+            enum:
+              - physical
+              - virtual
+            description:
+              Type of location for which to find availability. By default, slots are returned for
+              the `virtual` location type. If you specify a `physical` location type, you must also
+              specify the location's identifier in the `location` parameter.
+          required: false
+          description:
+            Type of location for which to find availability. By default, slots are returned for the
+            `virtual` location type. If you specify a `physical` location type, you must also
+            specify the location's identifier in the `location` parameter.
+        - in: query
+          style: form
+          explode: true
+          name: location
+          schema:
+            type: string
+            example: loc_EtTXhFHUtCXO1JWBd8TN
+            description:
+              Identifier of the location for which to find availability. This parameter is required
+              if you specify a `physical` location in the `location_type` parameter. If you are
+              searching for `virtual` availability, this parameter should not be used and fails if a
+              location identifier is passed. If the appointment type requires that license checks be
+              performed, the location's region is used to evaluate participants' licensure.
+          required: false
+          description:
+            Identifier of the location for which to find availability. This parameter is required if
+            you specify a `physical` location in the `location_type` parameter. If you are searching
+            for `virtual` availability, this parameter should not be used and fails if a location
+            identifier is passed. If the appointment type requires that license checks be performed,
+            the location's region is used to evaluate participants' licensure.
       responses:
         default:
           description: Successful response.
