--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -213,6 +213,41 @@ paths:
                   type: string
                   description: Unique ID or key of the appointment type for this appointment.
                   example: intake_visit
+                location:
+                  type: object
+                  properties:
+                    type:
+                      type: string
+                      enum:
+                        - physical
+                        - virtual
+                      description:
+                        Type of location where the appointment is booked. If you specify a
+                        `physical` location type, you must also specify the location's identifier in
+                        the `location` parameter.
+                      example: physical
+                    location:
+                      type: string
+                      example: loc_EtTXhFHUtCXO1JWBd8TN
+                      nullable: true
+                      description:
+                        Identifier of the location where the appointment is booked. The location is
+                        required if you specify a `physical` location type. If you are booking a
+                        `virtual` appointment, this parameter should not be used and fails if a
+                        location identifier is passed. If the appointment type requires that license
+                        checks be performed, the location's region is used to evaluate participants'
+                        licensure.
+                  required:
+                    - type
+                  nullable: true
+                  description:
+                    The location where the appointment is booked. By default, the appointment is
+                    booked in the `virtual` location. In order to book the appointment at a physical
+                    location, you must specify both the `physical` location type and the identifier
+                    of the physical location.
+                  example:
+                    type: physical
+                    location: loc_EtTXhFHUtCXO1JWBd8TN
                 time_zone:
                   type: string
                   description:
@@ -14135,6 +14170,15 @@ components:
           description: Reference to the type of appointment that was booked.
           example: aptp_meYUvkuaI2akjnb5Kwt7
           nullable: true
+        location:
+          oneOf:
+            - type: string
+            - $ref: "#/components/schemas/location"
+          x-expandable:
+            $ref: "#/components/schemas/location"
+          description: The location where this appointment is booked.
+          example: loc_EtTXhFHUtCXO1JWBd8TN
+          nullable: true
         member:
           oneOf:
             - type: string
@@ -14421,6 +14465,7 @@ components:
         - object
         - id
         - appointment_type
+        - location
         - member
         - subject
         - instructions
